--- a/estiloContacto.css
+++ b/estiloContacto.css
@@ -86,7 +86,7 @@ header .navbar ul li a:hover {
   font-family: var(--font-titles);
   font-size: 20pt;
   font-weight: var(--font-weight-bold);
-  margin-top: 20px;
+  margin-top: 50px;
   margin-bottom: 10px;
   letter-spacing: 0.1em;
 }
@@ -95,7 +95,7 @@ header .navbar ul li a:hover {
   font-size: 12pt;
   font-weight: var(--font-weight-regular);
   line-height: 1.6;
-  margin: 0px 30px 0px 30px;
+  margin: 0px 30px 30px 30px;
 }
 
 form {
@@ -199,7 +199,11 @@ footer {
   color: var(--color-grey);
   padding: 20px 0;
   text-align: center;
-  margin-top: 40px;
+  margin-top: 60px;
+}
+
+footer p {
+  margin: 10px;
 }
 
 @keyframes aparecer {
