--- a/productos.css
+++ b/productos.css
@@ -78,6 +78,40 @@ header .navbar ul li a:hover {
     text-decoration: underline;
 }
 
+.search-bar {
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+  gap: 10px;
+}
+
+.search-bar input {
+  border: 2px solid var(--color-darkwood);
+  padding: 10px;
+  border-radius: 20px;
+  flex: 1;
+}
+
+.search-bar a {
+  background-color:  var(--color-salvia);
+  color: white;
+  padding: 10px 15px;
+  border-radius: 20px;
+  transition: background-color 0.3s;
+  cursor: pointer;
+}
+
+.search-bar a:hover {
+  background-color: var(--color-oro);
+}
+
+a {
+    text-decoration: none;
+    display: inline-block;
+}
+
 /*Prductos - Catalogo-------------------*/
 
 #catalogo {
@@ -117,7 +151,15 @@ text-decoration: none;
 border-radius: 5px;
 margin-top: 10px;
 margin-left: 10px;
+border-radius: 10px;
+cursor: pointer;
+transition: background-color 0.3s;
 }
+
+button:hover {
+  background-color: var(--color-oro);
+}
+
 /*FIN de Prductos - Catalogo*/
 
 /* ------------------------------
@@ -131,9 +173,18 @@ footer {
   margin-top: 40px;
 }
 
+footer a {
+  color: var(--color-grey);
+  text-decoration: none;
+}
+
 /* Media Query para pantallas más grandes (el breakpoint es 768px) */
 @media (min-width: 768px) {
   .logo {
     margin: 10px 80px 10px 10px; 
+  }
+  .search-bar {
+    max-width: 600px;
+    margin: 20px auto;
   }
 }
