--- a/css/contacto.css
+++ b/css/contacto.css
@@ -95,7 +95,7 @@ header .navbar ul li a:hover {
   font-size: 12pt;
   font-weight: var(--font-weight-regular);
   line-height: 1.6;
-  margin: 0px 30px 30px 30px;
+  margin: 0px 30px 0px 30px
 }
 
 form {
@@ -149,6 +149,7 @@ button {
   border-radius: 10px;
   cursor: pointer;
   transition: background-color 0.3s;
+  margin-bottom: 10px;
 }
 
 button:hover {
