--- a/css/detalle.css
+++ b/css/detalle.css
@@ -118,7 +118,7 @@ h2 {
 }
 
 p {
-    margin: 10px;
+    margin: 10px 30px 10px 30px;
 }
 
 img {
@@ -163,7 +163,7 @@ footer {
   color: var(--color-grey);
   padding: 20px 0;
   text-align: center;
-  margin-top: 40px;
+  margin-top: 50px;
 }
 
 /* Media Query para pantallas más grandes (el breakpoint es 768px) */
